# vectorizer2-archive

./: .gitignore  .gitmodules  CMakeLists.txt
src/: allocator.h  api.h  assertion.h  blockAllocator.cpp  blockAllocator.h  cast.h  convexHull.cpp  convexHull.h  diff.cpp  diff.h  dynamicArray.h  maths.h  polygon.cpp  polygon.h  polygonGrad.cpp  polygonGrad.h  polygonShared.cpp  polygonShared.h  poolArray.h  spatialgrid.cpp  spatialgrid.h  util.h  vbvh.cpp  vbvh.h  vbvhGrad.cpp  vbvhGrad.h  vbvhShared.cpp  vbvhShared.h  vectorizer.cpp  vectorizer.h  vhiz.cpp  vhiz.h
test/: convConvTest.cpp  convHullTest.cpp  convSplitTest.cpp  diffTest.cpp  main.cpp  modelLoader.cpp  modelLoader.h  mtsTest.cpp  utilTest.cpp  vbvhTest.cpp  vhizTest.cpp
test/assets/mitsuba-scenes/dining-room/: scene-dusk-anim.xml  scene-dusk-glossy.xml  scene-dusk-point-ref.xml  scene-dusk-point.xml  scene-dusk-ref.xml  scene-dusk-vpath.xml  scene-dusk.xml  scene-sky-ref.xml  scene-sky-simple-ref.xml  scene-sky-simple.xml  scene-sky.xml  scene-sun-ref.xml  scene-sun.xml
test/assets/mitsuba-scenes/dragon/: dragon-invrender.xml  dragon-origin.xml  dragon-ref.xml  dragon-teaser-diffuse.xml  dragon-teaser.xml  dragon.xml
test/assets/mitsuba-scenes/gears/: gears.xml
test/assets/mitsuba-scenes/gi-room/: gi-room.xml
test/assets/mitsuba-scenes/hairball/: hairball-color-anim.xml  hairball-color.xml  hairball-coverage-move.xml  hairball-coverage.xml  hairball-noshadow.xml  hairball-ref.xml
test/assets/mitsuba-scenes/kaleido/: kaleido.xml
test/assets/mitsuba-scenes/living-room/: scene-glossy.xml  scene-movelight.xml  scene-pretty-ref.xml  scene-pretty.xml  scene-ref.xml  scene.xml
test/assets/mitsuba-scenes/mesh-opt/: mesh-opt.xml
test/assets/mitsuba-scenes/pufferball/: pufferball-move.xml  pufferball-movelight.xml  pufferball-ref.xml  pufferball.xml
test/assets/mitsuba-scenes/sphere/: sphere-move-x.xml  sphere.xml
test/assets/mitsuba-scenes/sphere2/: quad-move-x.xml  sphere2-biglight.xml  sphere2-move-x.xml  sphere2-ref.xml  sphere2.xml  uvsphere-move-x.xml
test/assets/mitsuba-scenes/spot/: spot-biglight.xml  spot-move-x.xml  spot-ref.xml  spot.xml
test/assets/mitsuba-scenes/spot-studio/: spot-studio-diffuse-ref.xml  spot-studio-diffuse.xml  spot-studio-metal-fd.xml  spot-studio-metal-multiad.xml  spot-studio-metal-rougher.xml  spot-studio-metal.xml  spot-studio-plastic.xml
test/assets/mitsuba-scenes/tree/: old-scene_side.xml  old-scene_side2.xml  tree-invrender.xml  tree-move-x.xml  tree-ref.xml  tree-rotate-z-anim.xml  tree-rotate-z.xml  tree.xml
tool/: cow-fd.py  dining-room-anim.py  dragon-invrender-lbfgs.py  dragon-invrender.py  exr2png.py  gears-invrender-lbfgs.py  gears-invrender.py  hairball-anim.py  img2mp4.py  imgdiff.py  invrender-plot.py  invutil.py  kaleido-invrender-lbfgs.py  kaleido-invrender.py  subdvis.py  tree-anim.py  tree-invrender-lbfgs.py  tree-invrender.py  vhizvis.py
tool/gradvis/: CubicL.txt  exr_utils.py  vis.py
tool/mesh-opt/: mesh-opt-lbfgs.py  mesh-opt.py
tool/mitsuba-fork/: .gitignore
tool/mitsuba-fork/include/mitsuba/: mitsuba.h
tool/mitsuba-fork/include/mitsuba/core/: frustum.h
tool/mitsuba-fork/include/mitsuba/render/: bsdf.h  derivative.h  diffutil.h  emitter.h  fwd.h  ltc.h  scene.h  sensor.h  trimesh.h
tool/mitsuba-fork/src/bsdfs/: SConscript  diffuse.cpp  disneylite.cpp  disneylitedata.cpp  disneylitedata.h
tool/mitsuba-fork/src/emitters/: area.cpp
tool/mitsuba-fork/src/integrators/: SConscript
tool/mitsuba-fork/src/integrators/vec/: bcone.cpp  bcone.h  bvh.cpp  bvh.h  kaleido.cpp  kaleidoad.cpp  pipeline.cpp  pipeline.h  pipelinead.cpp  pipelinead.h  primaryad.cpp  scenead.cpp  scenead.h  util.cpp  util.h  vdirect.cpp  vdirectad.cpp  vecdirect.cpp  vpath.cpp
tool/mitsuba-fork/src/libcore/: SConscript  frustum.cpp
tool/mitsuba-fork/src/librender/: SConscript  bsdf.cpp  derivative.cpp  emitter.cpp  ltc.cpp  scene.cpp  sensor.cpp  trimesh.cpp
tool/mitsuba-fork/src/sensors/: perspective.cpp
tool/mitsuba-fork/src/shapes/: obj.cpp
tool/mitsuba-fork/src/utils/: addimages.cpp  invrender.cpp
